# flora

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: ci.build.yml
patches/init/daisy/: Makefile  README.md  daisy.cpp
patches/init/kudzu/: Makefile  README.md  kudzu.cpp
patches/init/lotus/: Makefile  README.md  lotus.cpp
patches/init/oscillator/: oscillator.cpp
patches/pod/lily/: Makefile  README.md  lily.cpp
patches/seed/blink/: Makefile  README.md  blink.cpp
patches/seed/daisy/: Makefile  README.md  daisy.cpp
patches/seed/oscillator/: Makefile  oscillator.cpp
patches/simple_oscillator/: Makefile  simple_oscillator.cpp
scripts/: build.sh  flash.sh  format.sh
src/: bbx_audio.h  flora.h  sample.cpp  sample.h
